pom/rust/tests/ui/sealed_cannot_engage.stderr
error[E0308]: mismatched types
  --> tests/ui/sealed_cannot_engage.rs:15:27
   |
15 |     let _ = engage(&gate, sealed, &action);
   |             ------        ^^^^^^ expected `Shield<Active>`, found `Shield<Sealed>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected struct `syf_shield_pom::Shield<syf_shield_pom::Active>`
              found struct `syf_shield_pom::Shield<syf_shield_pom::Sealed>`
note: function defined here
  --> src/ep.rs
   |
   | pub fn engage<G: Gate>(
   |        ^^^^^^
